cargo-features = ["edition2021"]

[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
anyhow = "*"
ctrlc = "*"
parking_lot = "*"

postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"
